--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 <body>
 
     <form id="form-container" class="form-container">
-        <label for="street">Street: </label><input type="text" id="street" value="">
-        <label for="city">City: </label><input type="text" id="city" value="">
-        <button id="submit-btn">Submit</button>
+        <div class="form-content">
+            <label for="street">Street: </label><input type="text" id="street" value="">
+            <label for="city">City: </label><input type="text" id="city" value="">
+            <button id="submit-btn">Submit</button>
+        </div>
     </form>
 
     <hr>
