--- a/index.html
+++ b/index.html
@@ -33,6 +33,13 @@
         <h3 id="nytimes-header">New York Times Articles</h3>
         <ul id="nytimes-articles" class="article-list">What's going on in your new city? Enter an address and hit submit and the NY Times will tell you here!</ul>
     </div>
+    
+    <footer class="icons">
+		<span class="powered-txt">Powered By</span>
+		<a href="https://www.google.co.uk/maps" target="_blank"><img class="icon" src="GOOGLEicon.png"></a>
+        <a href="https://en.wikipedia.org/wiki/Main_Page" target="_blank"><img class="icon" src="WIKIicon.png"></a>
+        <a href="https://www.nytimes.com/" target="_blank"><img class="icon" src="NYTicon.png"></a>
+	</footer>
 
     <script src="js/libs/jquery.min.js"></script>
     <script src="js/script.js"></script>
